<resources>
    <string name="app_name">comic4U</string>


    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_vn">VN</string>
    <string name="lbl_t_mangalib">Từ MangaLib</string>
    <string name="lbl_c_c_ch_ng">Các chương</string>
    <string name="lbl_kinh_d">Kinh dị</string>
    <string name="msg_cu_c_s_ng_h_ng">Cuộc sống hàng ngày</string>
    <string name="chua_co_tai_khoan">Bạn chưa có tài khoản? Đăng ký</string>
    <string name="lbl_x_p_h_ng">Xếp hạng</string>
    <string name="lbl_mua_ngay">Mua Ngay</string>
    <string name="lbl2">...</string>
    <string name="lbl_4_5_5">4.5/5</string>
    <string name="lbl_265">265</string>
    <string name="lbl_t_mangapoisk">Từ MangaPoisk</string>
    <string name="quenmatkhau">Quên mật khẩu?</string>
    <string name="msg_a_ch_ng_i_n">Địa chỉ người nhận</string>
    <string name="msg_b_n_ch_a_c_t_i2">Bạn chưa có tài khoản?</string>
    <string name="msg_x_c_nh_n_m_t_kh">Xác nhận mật khẩu</string>
    <string name="msg_komi_san_cant_c">Komi san Cant Communicate</string>
    <string name="lbl_s_l_ng">Số lượng</string>
    <string name="lbl_t_p">Tập</string>
    <string name="lbl_top_ng_i_c">Top người đọc</string>
    <string name="lbl_ng_k2">Đăng ký</string>
    <string name="lbl_s_p_x_p_theo">Sắp xếp theo</string>
    <string name="lbl_nh_gi">Đánh giá</string>
    <string name="lbl_th_lo_i">Thể loại</string>
    <string name="msg_xin_ch_o_t_i_l">Xin chào. Tôi là học sinh Trường Đại học Ngoại ngữ - Tin học Thành phố Hồ Chí Minh (HUFLIT).</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="nhapmatkhau">Nhập mật khẩu</string>
    <string name="msg_komi_shouko_l">Komi Shouko là một thiếu nữ xinh đẹp. Trong mắt những người xung quanh, cô luôn có một hình tượng hoàn hảo và toàn diện về mọi mặt. Thậm chí, vào ngày mà cả lớp 1 năm nhất bầu lớp trưởng, cô đã được bầu chọn làm nữ thần sau khi cả lớp được Osana Najimi gợi ý.
Tuy nhiên, ít ai biết được rằng cô bị rối loạn giao tiếp do những người xung quanh chỉ dám đứng nhìn cô từ xa. Đó cũng là nguyên nhân khiến cho cô có cảm giác bị mọi người cô lập.</string>
    <string name="lbl_a_ch">Địa chỉ</string>
    <string name="lbl_nh_n_v_t_ch_nh">Nhân vật chính</string>
    <string name="lbl_ng_n_ng">Ngôn ngữ</string>
    <string name="msg_kaguya_shinomiy2">"Kaguya Shinomiya và Miyuki Shirogane cùng là thành viên của hội học sinh học viện Shuchi'in, được xem như là những thiên tài giữa các thiên tài. Thời gian bên nhau dần phát triển tình cảm họ dành cho nhau, nhưng lòng kiêu hãnh không cho phép họ là người thú nhận..."</string>
    <string name="msg_h_y_ch_n_s_th">Hãy chọn sở thích của bạn</string>
    <string name="textDangNhap">Đăng nhập</string>
    <string name="lbl_b_i_rengen_ill">Bởi rengen_ill</string>
    <string name="lbl_komi_san">Komi san</string>
    <string name="msg_mua_h_ng_th_nh">Mua hàng thành công !</string>
    <string name="lbl_124">124</string>
    <string name="lbl_gi_53_000vnd">Giá: 53.000VND</string>
    <string name="lbl_ng_nh_p2"> Đăng nhập</string>
    <string name="lbl_b_t_c_l_c_n_o">Bất cứ lúc nào</string>
    <string name="lbl_kinh_i_n">Kinh điển</string>
    <string name="msg_ch_o_m_ng_th_nh">Chào mừng thành viên !! </string>
    <string name="lbl_chapter_49">Chapter 49</string>
    <string name="lbl_ki_u">Kiểu</string>
    <string name="msg_ph_v_n_chuy_n">Phí vận chuyển:                 15.000VND</string>
    <string name="lbl_qu_n_m_t_kh_u2">Quên mật khẩu</string>
    <string name="msg_komi_shouko_l2">Komi Shouko là một thiếu nữ xinh đẹp. Trong mắt những người xung quanh, cô luôn có một hình tượng hoàn hảo và toàn diện về mọi mặt. Thậm chí, vào ngày mà cả lớp 1 năm nhất bầu lớp trưởng, cô đã được bầu chọn làm nữ thần sau khi cả lớp được Osana Najimi gợi ý.</string>
    <string name="lbl_b_l_c_t_m_ki_m">Bộ lọc tìm kiếm</string>
    <string name="msg_s_i_n_tho_i_n">Số điện thoại người nhận</string>
    <string name="lbl_re_zero_seco">Re-zero: Seco..</string>
    <string name="lbl_b_qua_b_y_gi">Bỏ qua bây giờ</string>
    <string name="lbl_jojo_s_bizarre">"Jojo's Bizarre"</string>
    <string name="msg_kaguya_sama_l2">Kaguya - Sama\u2028Love is war</string>
    <string name="nhapEmailSdt">Nhập email hoặc số diện thoại</string>
    <string name="lbl_gi_t_g_n">Giật gân</string>
    <string name="lbl_quay_l_i">Quay lại</string>
    <string name="msg_th_i_gian_v_n_c">Thời gian vận chuyển:           3 - 5 ngày</string>
    <string name="lbl_meliod4s">meliod4s</string>
    <string name="lbl_t_valvesucks">Từ ValveSucks</string>
    <string name="msg_b_n_c_t_i_k2">Bạn đã có tài khoản</string>
    <string name="lbl_minato_n">minato_n</string>
    <string name="msg_th_ng_tin_t_i_k">Thông tin tài khoản</string>
    <string name="msg_th_m_v_o_gi_h">Thêm vào giỏ hàng</string>
    <string name="msg_nh_p_email_ho_c2">Nhập email hoặc số điện thoại</string>
    <string name="lbl_evangelion">Evangelion</string>
    <string name="lbl_t_ng_gi_ti_n">Tổng giá tiền</string>
    <string name="lbl_c_p_nh_t">Cập nhật</string>
    <string name="lbl_ng_k"> Đăng ký</string>
    <string name="lbl_phi_u_l_u">Phiêu lưu</string>
    <string name="lbl_manga">Manga</string>
    <string name="lbl_s_th_ch">Sở thích ?!?!</string>
    <string name="lbl_t_t_c">Tất cả</string>
    <string name="lbl_k_ch_c">Kích cỡ</string>
    <string name="lbl_drama">Drama</string>
    <string name="msg_kaguya_sama_l">Kaguya - sama Love is warwar</string>
    <string name="lbl_manga_xu_t">Manga đề xuất</string>
    <string name="lbl_th_nh_vi_n">Thành viên</string>
    <string name="lbl_gi_67_000vnd">Giá: 67.000VND</string>
    <string name="lbl_96">96</string>
    <string name="lbl_th_ch">Đã thích</string>
    <string name="lbl_el_pudgo">el_pudgo</string>
    <string name="lbl_h_v_t_n">Họ và tên</string>
    <string name="lbl_x_c_nh_n">Xác nhận</string>
    <string name="lbl_15">15</string>
    <string name="msg_chi_ti_t_n_h">Chi tiết đơn hàng</string>
    <string name="lbl_b_n">Bí ẩn</string>
    <string name="msg_quay_l_i_ng_n">Quay lại Đăng nhập</string>
    <string name="lbl">\?</string>
    <string name="msg_kaguya_shinomiy">"Kaguya Shinomiya và Miyuki Shirogane cùng là thành viên của hội học sinh học viện Shuchi'in, được xem như là những thiên tài giữa các thiên tài. Thời gian bên nhau dần phát triển tình cảm họ dành cho nhau, nhưng lòng kiêu hãnh không cho phép họ là người thú nhận và ngỏ lời trước. Tình trường là chiến trường và trận chiến để khiến đối phương phải tỏ tình trước bắt đầu!"</string>
    <string name="lbl_online">Online</string>
    <string name="lbl_nh_p_email">Nhập email</string>
    <string name="msg_kaguya_sama_lo">Kaguya-sama: Love is war</string>
    <string name="lbl_c_c_nh_n_v_t">Các nhân vật</string>
    <string name="lbl_1">1</string>
    <string name="lbl_2">2</string>
    <string name="lbl_3">3</string>
    <string name="lbl_ho_c">hoặc</string>
    <string name="lbl_5">5</string>
    <string name="lbl_m_ng_d_ng">Mở ứng dụng</string>
    <string name="msg_manga_th_nh_h_n">Manga Thịnh Hành</string>
    <string name="lbl_t_nh_c_m">Tình cảm</string>
    <string name="lbl_h_nh_ng">Hành động</string>
    <string name="lbl_c_ti_p">Đọc tiếp</string>
    <string name="lbl_t_m_l">Tâm lý</string>
    <string name="lbl_l_t_theo_d_i">Lượt theo dõi</string>
    <string name="msg_lu_n_b_t_k_p_xu">Luôn bắt kịp xu hướng !!</string>
    <string name="lbl_asdsaas">asdsaas</string>
    <string name="lbl_ti_p_t_c">Tiếp tục</string>
    <string name="lbl_li_n_quan">Liên quan</string>
    <string name="msg_b_n_c_t_i_k">Bạn đã có tài khoản? Đăng nhập</string>
    <string name="lbl_l_ng_m_n">Lãng mạn</string>
    <string name="lbl_t_m_ki_m_manga">Tìm kiếm manga</string>
    <string name="lbl_thanh_to_n">Thanh Toán</string>
    <string name="msg_h_v_t_n_ng_i">Họ và tên người nhận</string>
    <string name="lbl_h_i_h_c">Hài hước</string>
    <string name="msg_b_t_k_ch_ng_n">Bất kỳ chương nào</string>
    <string name="msg_th_ng_tin_nh_n">Thông tin nhận hàng</string>
    <string name="lbl_ph_p_thu_t">Phép thuật</string>
    <string name="lbl_resler01">resler01</string>
    <string name="lbl_mua_ngay2">Mua ngay</string>
    <string name="lbl_135_000vnd">135.000VND</string>
    <string name="msg_nh_p_t_n_ng_i">Nhập tên người dùng</string>
</resources>