<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/trangdangky"
    tools:context=".TrangDangKy">

    <LinearLayout
        android:id="@+id/linearColumnarrowleft"

        android:gravity="center_horizontal"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_15pxv"
        android:layout_width="match_parent"
        android:orientation="vertical"
        style="@style/groupStylegray_200">
        <LinearLayout
            android:id="@+id/man_hinh_DangKy"

            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            style="@style/groupStylegray_200">
            <ImageView
                android:id="@+id/imageArrowleft"

                android:layout_gravity="start"
                android:layout_height="@dimen/_21pxh"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_width="@dimen/_21pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowleft_black_900" />
            <ImageView
                android:id="@+id/imageComics4U"

                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_130pxh"
                android:layout_marginEnd="@dimen/_32pxh"
                android:layout_marginStart="@dimen/_32pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="@dimen/_164pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_comics4u1" />

            <FrameLayout
                android:id="@+id/frameStackZeroTwo2"

                android:gravity="start"
                android:layout_height="@dimen/_714pxv"
                android:layout_marginTop="@dimen/_45pxv"
                android:layout_width="match_parent">
                <ImageView
                    android:id="@+id/imageZerotwoTwo"

                    android:layout_gravity="top|start"
                    android:layout_height="@dimen/_553pxv"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_zerotwo2"/>
                <LinearLayout
                    android:id="@+id/linearKhungDangKy"

                    android:layout_gravity="top|center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_28pxh"
                    android:layout_marginStart="@dimen/_28pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/txtDangKy"

                        android:ellipsize="end"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_59pxh"
                        android:layout_marginStart="@dimen/_59pxh"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:text="@string/lbl_ng_k2"
                        style="@style/txtPoppinssemibold32"
                        tools:text="@string/lbl_ng_k2"/>
                    <EditText
                        android:id="@+id/nhap_ten_nguoi_dung"

                        android:background="@drawable/rectangle_bg_white_a700_radius_28_5"
                        android:ellipsize="end"
                        android:hint="@string/msg_nh_p_t_n_ng_i"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_15pxh"
                        android:layout_marginStart="@dimen/_3pxh"
                        android:layout_marginTop="@dimen/_26pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_19pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_19pxh"
                        android:paddingTop="@dimen/_16pxv"
                        android:singleLine="true"
                        android:textColorHint="@color/black_900"
                        style="@style/etSolidRounded"
                        tools:ignore="Autofill"/>
                    <EditText
                        android:id="@+id/nhap_email"

                        android:background="@drawable/rectangle_bg_white_a700_radius_28_5"
                        android:ellipsize="end"
                        android:hint="@string/lbl_nh_p_email"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_15pxh"
                        android:layout_marginStart="@dimen/_3pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_19pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_19pxh"
                        android:paddingTop="@dimen/_16pxv"
                        android:singleLine="true"
                        android:textColorHint="@color/black_900"
                        style="@style/etSolidRounded"
                        tools:ignore="Autofill"/>
                    <EditText
                        android:id="@+id/nhap_mat_khau"

                        android:background="@drawable/rectangle_bg_white_a700_radius_28_5"
                        android:ellipsize="end"
                        android:hint="@string/nhapmatkhau"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_15pxh"
                        android:layout_marginStart="@dimen/_3pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_17pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_19pxh"
                        android:paddingTop="@dimen/_18pxv"
                        android:singleLine="true"
                        android:textColorHint="@color/black_900"
                        style="@style/etSolidRounded"
                        tools:ignore="Autofill"/>
                    <EditText
                        android:id="@+id/xac_nhan_mat_khau"

                        android:background="@drawable/rectangle_bg_white_a700_radius_28_5"
                        android:ellipsize="end"
                        android:hint="@string/msg_x_c_nh_n_m_t_kh"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_15pxh"
                        android:layout_marginStart="@dimen/_3pxh"
                        android:layout_marginTop="@dimen/_15pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_15pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_19pxh"
                        android:paddingTop="@dimen/_20pxv"
                        android:singleLine="true"
                        android:textColorHint="@color/black_900"
                        style="@style/etSolidRounded"
                        tools:ignore="Autofill"/>
                    <Button
                        android:id="@+id/btDangKy"

                        android:ellipsize="end"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_45pxv"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_13pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_13pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_ng_k2"
                        android:textAllCaps="false"
                        style="@style/btnSolidRounded_2"
                        tools:text="@string/lbl_ng_k2"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>

